--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "esm": "^3.2.25",
+    "tape": "^5.5.3",
     "typescript": "^4.7.4"
   },
   "scripts": {
     "build": "tsc -p src/index.ts",
-    "test": "npm run build && node test/index.test.js"
+    "test": "tape -r esm test/index.test.js"
+  },
+  "tape": {
+    "require": [
+      "esm"
+    ]
   }
 }
