--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "devDependencies": {
     "@types/node": "^18.0.0",
     "esm": "^3.2.25",
-    "tape": "^5.5.3",
-    "typescript": "^4.7.4"
+    "tape": "^5.5.3"
   },
   "scripts": {
     "build": "tsc -p src/index.ts",
